Cleanup resource utils